--- a/client/views/home.html
+++ b/client/views/home.html
@@ -51,11 +51,7 @@
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <div class="text-center m-t-lg">
-                        <h1 draggable="true">Welcome in INSPINIA Static SeedProject</h1>
-                        <small>It is an application skeleton for a typical web app. You can use it to
-                            quickly bootstrap your webapp projects and dev environment for these projects.</small>
-                    </div>
+                    <leaflet center="center" layers="layers" height="600px"></leaflet>
                 </div>
             </div>
         </div>
