--- a/client/views/home.html
+++ b/client/views/home.html
@@ -29,6 +29,29 @@
                         <accordion close-others="oneAtATime">
                             <accordion-group is-open="status.open">
                                 <accordion-heading>
+                                    Ubicaciones <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                                </accordion-heading>
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <th>Ubicación</th>
+                                        <th>Casos</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr ng-repeat="s in stats.aggs.ubicacion|limitTo:5">
+                                        <td>{{s.key}}</td>
+                                        <td class="text-navy"> {{s.doc_count}} </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                                <div class="input-group">
+                                   <select chosen multiple id="filtros-ubicaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre as t.nombre for t in filtros.departamentos" ng-model="ubicaciones" data-placeholder="Selecciona Departamentos">
+                                    </select>
+                                </div>
+                            </accordion-group>
+                            <accordion-group is-open="status.open">
+                                <accordion-heading>
                                     Tipificaciones <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
                                 <table class="table table-striped">
