UI: cloropleth now represents cases number per municipio

--- a/client/views/home.html
+++ b/client/views/home.html
@@ -46,7 +46,7 @@
                                     </tbody>
                                 </table>
                                 <div class="input-group">
-                                   <select chosen multiple id="filtros-ubicaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre as t.nombre for t in filtros.departamentos" ng-model="ubicaciones" data-placeholder="Selecciona Departamentos">
+                                   <select chosen multiple id="filtros-ubicaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre as t.nombre for t in filtros.departamentos" ng-model="departamentos" data-placeholder="Selecciona Departamentos">
                                     </select>
                                 </div>
                             </accordion-group>
