--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4449,223 +4449,7 @@ body.rtls .top-navigation .footer.fixed,
 body.rtls.top-navigation .footer.fixed {
   margin: 0;
 }
-@media (max-width: 768px) {
-  body.rtls .navbar-top-links li:last-child {
-    margin-left: 20px;
-  }
-  .body-small.rtls #page-wrapper {
-    position: inherit;
-    margin: 0 0 0 0px;
-    min-height: 1000px;
-  }
-  .body-small.rtls .navbar-static-side {
-    display: none;
-    z-index: 101;
-    position: absolute;
-    width: 70px;
-  }
-  .body-small.rtls.mini-navbar .navbar-static-side {
-    display: block;
-  }
-  .rtls.fixed-sidebar.body-small .navbar-static-side {
-    display: none;
-    z-index: 101;
-    position: fixed;
-    width: 220px;
-  }
-  .rtls.fixed-sidebar.body-small.mini-navbar .navbar-static-side {
-    display: block;
-  }
-}
-.rtls .ltr-support {
-  direction: ltr;
-}
-/*
- *
- *   This is style for skin config
- *   Use only in demo theme
- *
-*/
-.theme-config {
-  position: absolute;
-  top: 90px;
-  right: 0px;
-  overflow: hidden;
-}
-.theme-config-box {
-  margin-right: -220px;
-  position: relative;
-  z-index: 2000;
-  transition-duration: 0.8s;
-}
-.theme-config-box.show {
-  margin-right: 0px;
-}
-.spin-icon {
-  background: #1ab394;
-  position: absolute;
-  padding: 7px 10px 7px 13px;
-  border-radius: 20px 0px 0px 20px;
-  font-size: 16px;
-  top: 0;
-  left: 0px;
-  width: 40px;
-  color: #fff;
-  cursor: pointer;
-}
-.skin-setttings {
-  width: 220px;
-  margin-left: 40px;
-  background: #f3f3f4;
-}
-.skin-setttings .title {
-  background: #efefef;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: 600;
-  display: block;
-  padding: 10px 15px;
-  font-size: 12px;
-}
-.setings-item {
-  padding: 10px 30px;
-}
-.setings-item.skin {
-  text-align: center;
-}
-.setings-item .switch {
-  float: right;
-}
-.skin-name a {
-  text-transform: uppercase;
-}
-.setings-item a {
-  color: #fff;
-}
-.default-skin,
-.blue-skin,
-.ultra-skin,
-.yellow-skin {
-  text-align: center;
-}
-.default-skin {
-  font-weight: 600;
-  background: #1ab394;
-}
-.default-skin:hover {
-  background: #199d82;
-}
-.blue-skin {
-  font-weight: 600;
-  background: url("patterns/header-profile-skin-1.png") repeat scroll 0 0;
-}
-.blue-skin:hover {
-  background: #0d8ddb;
-}
-.yellow-skin {
-  font-weight: 600;
-  background: url("patterns/header-profile-skin-3.png") repeat scroll 0 100%;
-}
-.yellow-skin:hover {
-  background: #ce8735;
-}
-.ultra-skin {
-  font-weight: 600;
-  background: url("patterns/header-profile-skin-2.png") repeat scroll 0 0;
-}
-.ultra-skin:hover {
-  background: #1a2d40;
-}
-/*
- *
- *   SKIN 1 - INSPINIA - Responsive Admin Theme
- *   NAME - Blue light
- *
-*/
-.skin-1 .minimalize-styl-2 {
-  margin: 14px 5px 5px 30px;
-}
-.skin-1 .navbar-top-links li:last-child {
-  margin-right: 30px;
-}
-.skin-1.fixed-nav .minimalize-styl-2 {
-  margin: 14px 5px 5px 15px;
-}
-.skin-1 .spin-icon {
-  background: #0e9aef !important;
-}
-.skin-1 .nav-header {
-  background: #0e9aef;
-  background: url('patterns/header-profile-skin-1.png');
-}
-.skin-1.mini-navbar .nav-second-level {
-  background: #3e495f;
-}
-.skin-1 .breadcrumb {
-  background: transparent;
-}
-.skin-1 .page-heading {
-  border: none;
-}
-.skin-1 .nav > li.active {
-  background: #3a4459;
-}
-.skin-1 .nav > li > a {
-  color: #9ea6b9;
-}
-.skin-1 .nav > li.active > a {
-  color: #fff;
-}
-.skin-1 .navbar-minimalize {
-  background: #0e9aef;
-  border-color: #0e9aef;
-}
-body.skin-1 {
-  background: #3e495f;
-}
-.skin-1 .navbar-static-top {
-  background: #ffffff;
-}
-.skin-1 .dashboard-header {
-  background: transparent;
-  border-bottom: none !important;
-  border-top: none;
-  padding: 20px 30px 10px 30px;
-}
-.fixed-nav.skin-1 .navbar-fixed-top {
-  background: #fff;
-}
-.skin-1 .wrapper-content {
-  padding: 30px 15px;
-}
-.skin-1 #page-wrapper {
-  background: #f4f6fa;
-}
-.skin-1 .ibox-title,
-.skin-1 .ibox-content {
-  border-width: 1px;
-}
-.skin-1 .ibox-content:last-child {
-  border-style: solid solid solid solid;
-}
-.skin-1 .nav > li.active {
-  border: none;
-}
-.skin-1 .nav-header {
-  padding: 35px 25px 25px 25px;
-}
-.skin-1 .nav-header a.dropdown-toggle {
-  color: #fff;
-  margin-top: 10px;
-}
-.skin-1 .nav-header a.dropdown-toggle .text-muted {
-  color: #fff;
-  opacity: 0.8;
-}
-.skin-1 .profile-element {
-  text-align: center;
-}
-.skin-1 .img-circle {
+img-circle {
   border-radius: 5px;
 }
 .skin-1 .navbar-default .nav > li > a:hover,
