--- a/client/views/home.html
+++ b/client/views/home.html
@@ -31,8 +31,12 @@
                                 <accordion-heading>
                                     Ubicaciones <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <table class="table table-striped">
-                                    <thead>
+                                <div class="input-group">
+                                   <select chosen multiple id="filtros-ubicaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre.toLowerCase() as t.nombre for t in filtros.departamentos" ng-model="selected.ubicacion" data-placeholder="Selecciona Departamentos">
+                                    </select>
+                                </div>
+                                <!-- table class="table table-striped">
+                                <thead>
                                     <tr>
                                         <th>Ubicación</th>
                                         <th>Casos</th>
@@ -44,17 +48,13 @@
                                         <td class="text-navy"> {{s.doc_count}} </td>
                                     </tr>
                                     </tbody>
-                                </table>
-                                <div class="input-group">
-                                   <select chosen multiple id="filtros-ubicaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre.toLowerCase() as t.nombre for t in filtros.departamentos" ng-model="selected.ubicacion" data-placeholder="Selecciona Departamentos">
-                                    </select>
-                                </div>
+                                </table -->
                             </accordion-group>
                             <accordion-group is-open="status.open">
                                 <accordion-heading>
                                     Tipificaciones <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <table class="table table-striped">
+                                <!-- table class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Tipificación</th>
@@ -67,7 +67,7 @@
                                         <td class="text-navy"> {{s.count}} </td>
                                     </tr>
                                     </tbody>
-                                </table>
+                                </table -->
                                 <div class="input-group">
                                    <select chosen multiple id="filtros-tipificaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.codigo as t.nombre for t in filtros.tipificaciones" ng-model="selected.tipificacion" data-placeholder="Selecciona Tipificaciones">
                                     </select>
@@ -77,7 +77,7 @@
                                 <accordion-heading>
                                     Responsables <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <table class="table table-striped">
+                                <!-- table class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Responsable</th>
@@ -90,7 +90,7 @@
                                         <td class="text-navy"> {{s.doc_count}} </td>
                                     </tr>
                                     </tbody>
-                                </table>
+                                </table -->
                                 <div class="input-group">
                                    <select chosen multiple id="filtros-responsables" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre as t.nombre for t in filtros.responsables" ng-model="selected.responsable" data-placeholder="Selecciona Responsables">
                                     </select>
