--- a/client/views/home.html
+++ b/client/views/home.html
@@ -35,7 +35,7 @@
                                    <select chosen multiple id="filtros-ubicaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre.toLowerCase() as t.nombre for t in filtros.departamentos" ng-model="selected.ubicacion" data-placeholder="Selecciona Departamentos">
                                     </select>
                                 </div>
-                                <!-- table class="table table-striped">
+                                <table class="table table-striped">
                                 <thead>
                                     <tr>
                                         <th>Ubicación</th>
@@ -48,13 +48,17 @@
                                         <td class="text-navy"> {{s.doc_count}} </td>
                                     </tr>
                                     </tbody>
-                                </table -->
+                                </table>
                             </accordion-group>
                             <accordion-group is-open="status.open">
                                 <accordion-heading>
                                     Tipificaciones <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <!-- table class="table table-striped">
+                                <div class="input-group">
+                                   <select chosen multiple id="filtros-tipificaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.codigo as t.nombre for t in filtros.tipificaciones" ng-model="selected.tipificacion" data-placeholder="Selecciona Tipificaciones">
+                                    </select>
+                                </div>
+                                <table class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Tipificación</th>
@@ -67,17 +71,17 @@
                                         <td class="text-navy"> {{s.count}} </td>
                                     </tr>
                                     </tbody>
-                                </table -->
-                                <div class="input-group">
-                                   <select chosen multiple id="filtros-tipificaciones" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.codigo as t.nombre for t in filtros.tipificaciones" ng-model="selected.tipificacion" data-placeholder="Selecciona Tipificaciones">
-                                    </select>
-                                </div>
+                                </table>
                             </accordion-group>
                             <accordion-group is-open="status.open">
                                 <accordion-heading>
                                     Responsables <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                                 </accordion-heading>
-                                <!-- table class="table table-striped">
+                                <div class="input-group">
+                                   <select chosen multiple id="filtros-responsables" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre as t.nombre for t in filtros.responsables" ng-model="selected.responsable" data-placeholder="Selecciona Responsables">
+                                    </select>
+                                </div>
+                                <table class="table table-striped">
                                     <thead>
                                     <tr>
                                         <th>Responsable</th>
@@ -90,17 +94,28 @@
                                         <td class="text-navy"> {{s.doc_count}} </td>
                                     </tr>
                                     </tbody>
-                                </table -->
-                                <div class="input-group">
-                                   <select chosen multiple id="filtros-responsables" class="chosen-select" style="width:100%;" tabindex="4" ng-options="t.nombre as t.nombre for t in filtros.responsables" ng-model="selected.responsable" data-placeholder="Selecciona Responsables">
-                                    </select>
-                                </div>
+                                </table>
                             </accordion-group>
                         </accordion>
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <leaflet center="center" layers="layers" height="600px"></leaflet>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel-group" style="margin-bottom:5px;opacity:0.8;">
+                                <div class="panel panel-default">
+                                    <div class="panel-body" style="height:auto;padding:5px;">
+                                        <div id="histograma-casos"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <leaflet center="center" layers="layers" height="600px"></leaflet>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
