entry page linking to map

--- a/client/views/entrada.html
+++ b/client/views/entrada.html
@@ -64,21 +64,21 @@
         </div>
         <div class="row">
             <div class="col-lg-4 features-text">
-              <a href="/#/victimas">
+              <a href="/#/victimas/mapa">
                 <h2>Por mapa</h2>
                 <i class="fa fa-map-marker big-icon pull-right"></i>
                 <p>En un mapa se visualizan los hechos documentados. Con filtros se puede especificar parámetros de búsqueda, por ejemplo ubicación, responsables, o tipo de acontecimiento. </p>
               </a>
             </div>
             <div class="col-lg-4 features-text">
-              <a href="/#/victimas">
+              <a href="/#/victimas/tiempo">
                 <h2>Por linea de tiempo</h2>
                 <i class="fa fa-clock-o big-icon pull-right"></i>
                 <p>Observar como los hechos se han estado dando en el tiempo.</p>
               </a>
             </div>
             <div class="col-lg-4 features-text">
-              <a href="/#/victimas">
+              <a href="/#/victimas/datos">
                 <h2>Por datos</h2>
                 <i class="fa fa-table big-icon pull-right"></i>
                 <p>Los hechos, caso por caso, en su documentación abierta.</p>
