Splitting sub-sections into separate controllers; pie charts now also respond to filters

--- a/client/views/entrada.html
+++ b/client/views/entrada.html
@@ -64,14 +64,14 @@
         </div>
         <div class="row">
             <div class="col-lg-4 features-text">
-              <a href="/#/victimas/mapa">
+              <a href="/#/visual/mapa/cloropleth">
                 <h2>Por mapa</h2>
                 <i class="fa fa-map-marker big-icon pull-right"></i>
                 <p>En un mapa se visualizan los hechos documentados. Con filtros se puede especificar parámetros de búsqueda, por ejemplo ubicación, responsables, o tipo de acontecimiento. </p>
               </a>
             </div>
             <div class="col-lg-4 features-text">
-              <a href="/#/victimas/tiempo">
+              <a href="/#/visual/tiempo">
                 <h2>Por linea de tiempo</h2>
                 <i class="fa fa-clock-o big-icon pull-right"></i>
                 <p>Observar como los hechos se han estado dando en el tiempo.</p>
