--- a/client/views/mapa.html
+++ b/client/views/mapa.html
@@ -1,2 +1,3 @@
-
+                  <section id="map_section" ng-controller="MapCtrl">
                     <leaflet center="center" layers="layers" height="600px"></leaflet>
+                  </section>
