--- a/client/views/pie.html
+++ b/client/views/pie.html
@@ -1,8 +1,11 @@
+          <section id="stats_section" ng-controller="StatsCtrl">  
             <div class="row">
-                  <div class="col-lg-6">
+                  <div class="col-lg-12">
                     <div post-render view="ubicacion" id="pie_ubicacion" class="visualization_wrapper"></div>
                   </div> 
-                  <div class="col-lg-6">
+            </div>
+            <div class="row">
+                  <div class="col-lg-12">
                     <div post-render view="tipificaciones" id="pie_tipificaciones" class="visualization_wrapper"></div>
                   </div> 
             </div>
@@ -11,3 +14,4 @@
                     <div post-render view="responsables" id="pie_responsables" class="visualization_wrapper"></div>
                   </div> 
             </div>
+          </section>
